이벤트 바인딩 및 날씨 API
메뉴에 따라 클릭 이벤트 바인딩
날씨 API를 이용하여 날씨받아오기

--- a/public/css/leftmenu.css
+++ b/public/css/leftmenu.css
@@ -1,14 +1,26 @@
 #root .aside {
   width: 23vw;
   height: 100vh;
-  border-right: 2px solid #edb45b;
+  border-right: 1.2px solid #edb45b;
   position: fixed;
   display: flex;
   flex-direction: column;
-  /* background-image: linear-gradient(to right, #3b5735, #4fa345, #f2fcef, #386c5f); */
+  background-image: linear-gradient(147deg, #f2fcef 20%, #d9ecf2 80%);
   /* background-color: rgba(156, 181, 150, 0.75); */
-  background-color: #9cb596;
+  /* background-color: #9cb596; */
   box-sizing: border-box;
+  animation: left-to-right-slide 0.5s ease-in-out forwards;
+}
+
+@keyframes left-to-right-slide {
+  from {
+    opacity: 0;
+    width: 0;
+  }
+  to {
+    opacity: 1;
+    width: 23vw;
+  }
 }
 
 .aside .header-logo {
@@ -17,11 +29,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #385735;
+  font-weight: 600;
+  font-size: 4vh;
+  /* background-color: #ffffff; */
 }
 
 .aside .leftmenu {
-  height: 100%;
+  height: 100vw;
   padding: 1.5vh 1.5vw;
   display: flex;
   justify-content: center;
@@ -29,6 +43,22 @@
 }
 
 .aside .leftmenu > ul {
-  width: 50%;
-  text-align: center;
+  width: 100vw;
+  height: fit-content;
+}
+
+.aside .leftmenu > ul > li {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 3vh;
+  font-size: 1.8vh;
+  margin-bottom: 20px;
+  border: 1px solid #efefef;
+  border-radius: 20vw;
+  background-color: #ffffff;
+  color: black;
+  font-weight: 500;
+  box-shadow: 4px 4px 8px 1px rgba(0, 0, 0, 0.65);
+  cursor: pointer;
 }
