--- a/public/css/contents.css
+++ b/public/css/contents.css
@@ -6,9 +6,23 @@
 
 .contents .contents__header {
   width: 100%;
-  height: fit-content;
+  height: 3vh;
   background-color: #d6dccc;
+  background-image: linear-gradient(147deg, #f2fcef, #1aa6b7);
   display: flex;
+  animation-delay: 1;
+  animation: slide-top-down 0.5s ease-in-out forwards;
+}
+
+@keyframes slide-top-down {
+  0% {
+    opacity: 0;
+    height: 0;
+  }
+  100% {
+    opacity: 1;
+    height: 3vh;
+  }
 }
 
 .contents .contents__header .icons {
@@ -16,5 +30,9 @@
   width: 20%;
   justify-content: space-evenly;
   align-items: center;
-  font-size: 22px;
+  font-size: 2.5vh;
+}
+
+.contents .contents__main {
+  font-size: 1.8vh;
 }
