--- a/public/css/contents.css
+++ b/public/css/contents.css
@@ -12,6 +12,7 @@
   display: flex;
   animation-delay: 1;
   animation: slide-top-down 0.5s ease-in-out forwards;
+  border-bottom: 1.2px solid #edb45b;
 }
 
 @keyframes slide-top-down {
@@ -34,5 +35,39 @@
 }
 
 .contents .contents__main {
-  font-size: 1.8vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-size: 2vh;
+  width: 100%;
+  height: 96.8vh;
+  color: white;
+}
+
+.contents .contents__main .main__bg {
+  position: absolute;
+  top: 0;
+  z-index: -1;
+}
+
+.contents .contents__main .main__time {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-size: 4rem;
+  font-weight: 600;
+}
+
+.contents .contents__main .weather {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  flex-direction: column;
+  top: 3vh;
+  right: 0;
+  font-size: 2rem;
+  font-weight: 500;
 }
