--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,12 +2,15 @@ html {
   padding: 0;
   margin: 0;
   height: 100vh;
+  font-size: 67.5%;
 }
 
 body {
   padding: 0;
   margin: 0;
   height: 100vh;
+  font-family: "bedas neue";
+  font-size: 67.5%;
 }
 
 #root {
