--- a/public/css/index.css
+++ b/public/css/index.css
@@ -9,12 +9,18 @@ body {
   padding: 0;
   margin: 0;
   height: 100vh;
-  font-family: "bedas neue";
+  font-family: "Roboto", "Open Sans";
   font-size: 67.5%;
 }
 
 #root {
   height: 100vh;
+}
+
+#root .contents {
+  padding-left: 23vw;
+  display: flex;
+  flex-direction: column;
 }
 
 a {
@@ -32,4 +38,15 @@ a:visited {
 ul {
   all: unset;
   list-style-type: none;
+}
+
+.contents .contents__main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-size: 2vh;
+  width: 77vw;
+  height: 100vh;
+  color: white;
 }
