--- a/public/css/leftmenu.css
+++ b/public/css/leftmenu.css
@@ -9,6 +9,7 @@
   /* background-color: rgba(156, 181, 150, 0.75); */
   /* background-color: #9cb596; */
   box-sizing: border-box;
+  box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.65);
   animation: left-to-right-slide 0.5s ease-in-out forwards;
 }
 
@@ -31,6 +32,8 @@
   align-items: center;
   font-weight: 600;
   font-size: 4vh;
+  padding: 15px 10px;
+  box-sizing: border-box;
   /* background-color: #ffffff; */
 }
 
