--- a/public/css/momentum.css
+++ b/public/css/momentum.css
@@ -1,15 +1,9 @@
-#root .contents {
-  padding-left: 23vw;
-  display: flex;
-  flex-direction: column;
-}
-
 .contents .contents__header {
   width: 100%;
   height: 3vh;
   background-color: #d6dccc;
   background-image: linear-gradient(147deg, #f2fcef, #1aa6b7);
-  display: flex;
+  display: none;
   animation-delay: 1;
   animation: slide-top-down 0.5s ease-in-out forwards;
   border-bottom: 1.2px solid #edb45b;
@@ -34,17 +28,6 @@
   font-size: 2.5vh;
 }
 
-.contents .contents__main {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  font-size: 2vh;
-  width: 75vw;
-  height: 100vh;
-  color: white;
-}
-
 .contents .contents__main .main__bg {
   position: absolute;
   width: 77vw;
@@ -62,10 +45,18 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  font-size: 4rem;
-  font-weight: 600;
-
+  margin-bottom: 1vh;
   color: #d9ecf2;
+}
+
+.contents .contents__main .main__time .time-hms {
+  font-size: 10rem;
+  color: white;
+}
+
+.contents .contents__main .main__time .time-ymd {
+  font-size: 2.5rem;
+  color: white;
 }
 
 .contents .contents__main .weather {
@@ -75,16 +66,22 @@
   align-items: flex-end;
   flex-direction: column;
   top: 3vh;
-  right: 0;
+  right: 3vh;
   font-size: 2rem;
   font-weight: 500;
-  color: #d9ecf2;
+  /* color: #2d3436; */
+  color: white;
 }
 .contents .contents__main .main__todolist-container {
+  display: flex;
+  flex-wrap: wrap;
+  box-sizing: border-box;
   width: 30vw;
 }
 .contents .contents__main .main__todolist-container .todolist-container__textbox {
   width: 100%;
+  padding: 7px;
+  height: 2vh;
 }
 
 .todolist-container__list .list-item {
@@ -92,6 +89,11 @@
   justify-content: space-between;
   align-items: center;
   width: 30vw;
+  height: 2.5vh;
+  color: black;
+  background-color: white;
+  margin-top: 1.5vh;
+  border-radius: 20px;
 }
 .todolist-container__list .list-item span {
   width: fit-content;
