--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto&display=swap");
 @import "./index.css";
 @import "./leftmenu.css";
-@import "./contents.css";
+@import "./momentum.css";
+@import "./postscreen.css";
