--- a/public/css/postscreen.css
+++ b/public/css/postscreen.css
@@ -1,15 +1,26 @@
 .contents .contents__main .main-post-screen {
-  width: 80%;
-  height: 100%;
+  width: 85%;
+  height: 95%;
   padding: 0 3.5vw;
-  background-color: red;
+  background-color: #f1f2f6;
+  box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.75);
   box-sizing: border-box;
 }
 
-.contents .contents__main .main-post-screen .post-title {
+.contents .contents__main .main-post-screen .post-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin: 1vh 0;
+}
+
+.contents .contents__main .main-post-screen .post-header .post-title {
+  width: 5vw;
+  background-color: white;
+  border-radius: 20px;
+  color: black;
+  font-size: 2.5rem;
+  text-align: center;
 }
 
 .contents .contents__main .main-post-screen .post {
