react summernote bootstrap
리액트에서 사용 가능한 웹에디터 및 UI 추가
summernote에서 오류가 아직있음

--- a/public/css/leftmenu.css
+++ b/public/css/leftmenu.css
@@ -10,7 +10,8 @@
   /* background-color: #9cb596; */
   box-sizing: border-box;
   box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.65);
-  animation: left-to-right-slide 0.5s ease-in-out forwards;
+  animation: left-to-right-slide 0.3s ease-in-out forwards;
+  transition: display ease-in-out 0.2s;
 }
 
 @keyframes left-to-right-slide {
@@ -21,6 +22,35 @@
   to {
     opacity: 1;
     width: 23vw;
+  }
+}
+
+@media (max-width: 560px) {
+  #root .aside {
+    display: none;
+  }
+
+  .contents .contents__main {
+    width: 100vw;
+    padding: 0;
+  }
+
+  .contents .contents__header {
+    display: flex;
+  }
+}
+
+@media (min-width: 561px) {
+  #root .aside {
+    display: flex;
+  }
+  .contents .contents__main {
+    width: 100vw;
+    padding-left: 23vw;
+  }
+
+  .contents .contents__header {
+    display: none;
   }
 }
 
