--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,7 +2,7 @@ html {
   padding: 0;
   margin: 0;
   height: 100vh;
-  font-size: 67.5%;
+  font-size: 16px;
 }
 
 body {
@@ -10,7 +10,6 @@ body {
   margin: 0;
   height: 100vh;
   font-family: "Roboto", "Open Sans";
-  font-size: 67.5%;
 }
 
 #root {
@@ -18,7 +17,6 @@ body {
 }
 
 #root .contents {
-  padding-left: 23vw;
   display: flex;
   flex-direction: column;
 }
@@ -49,4 +47,34 @@ ul {
   width: 77vw;
   height: 100vh;
   color: white;
+}
+
+.contents .contents__header {
+  width: 100%;
+  height: 3vh;
+  background-color: #d6dccc;
+  background-image: linear-gradient(147deg, #f2fcef, #1aa6b7);
+  display: flex;
+  animation-delay: 1;
+  animation: slide-top-down 0.5s ease-in-out forwards;
+  border-bottom: 1.2px solid #edb45b;
+}
+
+@keyframes slide-top-down {
+  0% {
+    opacity: 0;
+    height: 0;
+  }
+  100% {
+    opacity: 1;
+    height: 3vh;
+  }
+}
+
+.contents .contents__header .icons {
+  display: flex;
+  width: 20%;
+  justify-content: space-evenly;
+  align-items: center;
+  font-size: 2.5vh;
 }
