--- a/public/css/postscreen.css
+++ b/public/css/postscreen.css
@@ -1,39 +1,56 @@
 .contents .contents__main .main-post-screen {
-  width: 85%;
+  width: 70%;
   height: 95%;
   padding: 0 3.5vw;
-  background-color: #f1f2f6;
+  background-image: linear-gradient(to bottom, #2f3542, #57606f);
+  /* background-color: #2f3542; */
   box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.75);
   box-sizing: border-box;
+  border-radius: 20px;
 }
 
 .contents .contents__main .main-post-screen .post-header {
   display: flex;
+  height: 4vh;
   justify-content: space-between;
+  background-color: #ffffff;
   align-items: center;
-  margin: 1vh 0;
+  border-radius: 7px;
+  margin: 2vh 0;
+  padding: 0 1.5vw;
 }
 
 .contents .contents__main .main-post-screen .post-header .post-title {
-  width: 5vw;
-  background-color: white;
+  width: 20vw;
   border-radius: 20px;
   color: black;
-  font-size: 2.5rem;
-  text-align: center;
+  font-size: 2vh;
+  font-weight: 700;
+}
+
+.post-search {
+  display: none;
+}
+.contents .contents__main .main-post-screen .post-header .post-search input[type="text"] {
+  width: 10vw;
+  height: 1.5vh;
+  font-size: 1.5vh;
 }
 
 .contents .contents__main .main-post-screen .post {
   display: flex;
   width: 100%;
   height: fit-content;
+  flex-direction: column;
 }
 
 .contents .contents__main .main-post-screen .post-list-container {
   width: 100%;
-  height: 100%;
+  height: fit-content;
   background-color: white;
   color: black;
+  border-radius: 10px;
+  margin-bottom: 2vh;
 }
 
 .contents .contents__main .main-post-screen .post-list-container .post-lists {
@@ -42,7 +59,54 @@
 }
 
 .contents .contents__main .main-post-screen .post-list-container .post-lists > li {
-  margin: 0.5vw;
-  padding: 0 0.2vw 0.2vw 0.2vw;
-  background-color: #81ecec;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin: 1.5vh;
+  padding: 0 1.5vw;
+  background-color: #f1f2f6;
+  box-shadow: 0 0 3px 2px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  transition: box-shadow ease-in-out 0.25s;
+}
+
+.contents .contents__main .main-post-screen .post-list-container .post-lists > li:hover {
+  box-shadow: 0 0 3px 2px rgba(112, 161, 255, 1);
+  cursor: pointer;
+}
+
+.contents .contents__main .main-post-screen .post-bnt-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.contents .contents__main .main-post-screen .post-bnt-box .post-page-list-container {
+  width: fit-content;
+}
+
+.contents .contents__main .main-post-screen .post-bnt-box .page-btn {
+  cursor: pointer;
+}
+
+.contents .contents__main .main-post-screen .post-bnt-box .post-page-list-container .page-lists {
+  display: flex;
+}
+
+.contents .contents__main .main-post-screen .post-bnt-box .post-page-list-container .page-lists > li {
+  padding: 0 1.5px;
+  margin: 0 0.5vw;
+  cursor: pointer;
+  box-sizing: border-box;
+}
+
+.contents .contents__main .main-post-screen .post-bnt-box .post-write-btn {
+  position: absolute;
+  right: 16%;
+}
+
+.contents .contents__main .main-post-screen .post-bnt-box .post-write-btn input[type="button"] {
+  font-size: 1.5vh;
+  width: 100%;
+  height: 3vh;
 }
